# NEAT-Template-Python

./: .pre-commit-config.yaml  CONTRIBUTING.md  README.md  Vector2.py  baseAi.py  baseNeat.py  dmypy_test.sh  neat.py  pyproject.toml  requirements_dev.txt
examples/minimax/: AI_Data (copy).json  checkers.py  checkers_ai.py  minimax.py  run_ai.py
src/neat/: __init__.py  neat.py  vector.py
tests/: test_vector.py
