[build-system]
requires = ["setuptools >= 64"]
build-backend = "setuptools.build_meta"

[project]
name = "neat"
dynamic = ["version"]
authors = [
  { name="CoolCat467" },
  { name="Code-Bullet" },
]
description = "This is a Python3 Implementation of Code-Bullets NEAT Template, originally programmed in JavaScript. This is intended to be used to easily add an AI to a game."
readme = {file = "README.md", content-type = "text/markdown"}
license = {file = "LICENSE"}
requires-python = ">=3.9"
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3 :: Only",
    "Operating System :: OS Independent",
    "Typing :: Typed",
]
keywords = ["ai", "neat"]
dependencies = []

[tool.setuptools.dynamic]
version = {attr = "neat.neat.__version__"}

[project.urls]
"Homepage" = "https://github.com/CoolCat467/NEAT-Template-Python"
"Source" = "https://github.com/CoolCat467/NEAT-Template-Python"
"Bug Tracker" = "https://github.com/CoolCat467/NEAT-Template-Python/issues"

[tool.pytest.ini_options]
addopts = "--cov-report term-missing --cov=neat"
testpaths = [
    "tests",
]

[tool.mypy]
mypy_path = "src"
check_untyped_defs = true
disallow_any_generics = true
disallow_untyped_calls = true
disallow_untyped_defs = true
ignore_missing_imports = true
no_implicit_optional = true
no_implicit_reexport = true
show_column_numbers = true
show_error_codes = true
show_traceback = true
strict = true
strict_equality = true
warn_redundant_casts = true
warn_return_any = true
warn_unreachable = true
warn_unused_configs = true
warn_unused_ignores = true

[tool.black]
line-length = 79
target-version = ["py311"]

[tool.ruff.isort]
combine-as-imports = true

[tool.pycln]
all = true
disable_all_dunder_policy = true

[tool.ruff]
line-length = 79
fix = true

include = ["*.py", "*.pyi", "**/pyproject.toml"]
select = [
    "A",  # flake8-builtins
    "ASYNC",  # flake8-async
    "B",  # flake8-bugbear
    "C4",  # flake8-comprehensions
    "COM",  # flake8-commas
    "D",  # pydocstyle
    "E",  # Error
    "EXE",  # flake8-executable
    "F",  # pyflakes
    "FA",  # flake8-future-annotations
    "I",  # isort
    "N",  # pep8-naming
    "PIE",  # flake8-pie
    "PT",  # flake8-pytest-style
    "PYI",  # flake8-pyi
    "Q",  # flake8-quotes
    "RET",  # flake8-return
    "RUF",  # Ruff-specific rules
    "S",  # flake8-bandit
    "SIM",  # flake8-simplify
    "SLOT",  # flake8-slots
    "TCH",  # flake8-type-checking
    "UP",  # pyupgrade
    "W",  # Warning
    "YTT",  # flake8-2020
]
ignore = [
    "D211",  # conflicts with docstrings
    "D213",  # conflicts with docstrings
##    "E203",  # conflicts with black
    "E402",  # module level import not at top of file
    "E501",  # conflicts with black
    "S101",  # use of assert for tests and type narrowing
    "D203",
    "D401",  # Imparative mood docstrings
]

unfixable = ["D203"]

[tool.ruff.per-file-ignores]
"src/neat/neat.py" = [
    "S311",  # Not using random for cryptographic purposes
]
"tests/*" = [
    "D100",  # no module docstring
    "D103",  # no docstrings
]

[tool.tox]
legacy_tox_ini = """
    [tox]
    envlist = py39, py310, py311, py312, pytest, mypy
    isolated_build = false

    [gh-actions]
    python =
        3.9: py39, pytest
        3.10: py310, pytest
        3.11: py311, pytest
        3.12: py312, pytest, mypy

    [testenv]
    setenv =
        PYTHONPATH = {toxinidir}

    [testenv:pytest]
    deps =
        pytest
        pytest-cov
        pytest-trio
    commands = pytest --basetemp={envtmpdir}

    [testenv:mypy]
    deps =
        mypy
    commands = mypy src
"""
